--- a/TODO
+++ b/TODO
@@ -2,8 +2,6 @@
 check correctness of set_env_val function
 check correctness of buitlin cd implementation
 implement free_command function
-oldpwd is not correct
-seg fault cd with relative path
 
-clear func (not so important)
-seg fault when removed PWD
+add better env parsing, cause some values can contain '=' sign, ans split will behave incorrect
+
