--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ STILL TO DO:
 a: add status codes support
 a: check correctness of set_env_val function
 a: heredoc ctrl D
+a: ks leaks
 
 h: make func that will free cmd
 h: remove & support
