Fix exit behaviour

--- a/TODO
+++ b/TODO
@@ -6,8 +6,7 @@ do not forget about file descriptors
 STILL TO DO:
 a: add status codes support
 a: check correctness of set_env_val function
-a: heredoc ctrl D
-a: exit rewrite
+check: a: exit rewrite
 a: $_ unset case
 a: minishell: /home/azolotar/Desktop/main_core/minishell: Execution failded
 
@@ -19,7 +18,6 @@ h: cat ><
 h: () brackets
 h: cat << end | grep some_word
 h: echo hello > file1 file2
-h: delimiter has trash symbols
 
 DONE:
 done - echo hello' '$USER'$USER'
@@ -39,6 +37,8 @@ done - handle -nnnnn echo flag
 done - heredoc
 done - NOT_EXIST_CMD leaks - fixed
 done - if cmd == NULL do not execute
+done - delimiter has trash symbols
+done -  heredoc ctrl D
 
 
 export CMD=3&&(export CMD=2&&     (export CMD=1&&echo $CMD) && echo $CMD) && echo 3"$CM" && cat /dev/random|head -n 4 |     wc -l && touch 1.dd&&touch 2.dd && touch 3.dd&&touch 4.dd && touch 5.dd && echo *.dd |wc -w && rm *.dd && (cat /dev/random) | head -n 6 | wc -l && export CMD="echo 7"&&$CMD&&export CMD="echo       8"&&$CMD&& echo $AA""9"$AF"&&export CMD="ff"&&echo 10 >$CMD&&cat $CMD&& rm $CMD
